--- a/BNTA/react/myprofile/my-app/package.json
+++ b/BNTA/react/myprofile/my-app/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-typed": "^1.2.0",
+    "react-vertical-timeline-component": "^3.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
