--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,20 +3,25 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
+    
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - name: checkout
-      uses: actions/checkout@v2
-    - name: setup node
-      uses: actions/setup-node@v1
-      with:
-        node-version: "10.x"
-    - run: npm install
-    - run: npm run build
-    - run: npm test
-    - name: deploy
-      uses: crazy-max/ghaction-github-pages@v1
-      with:
-        target_branch: gh-pages
-        build_dir: build
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: setup node
+        uses: actions/setup-node@v1
+        with:
+          node-version: "10.x"
+      - run: npm install
+      - run: npm run build
+      - run: npm test
+      - name: deploy
+        uses: crazy-max/ghaction-github-pages@v1
+        with:
+          target_branch: gh-pages
+          build_dir: build
