--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,7 +19,9 @@ jobs:
           node-version: "10.x"
       - run: npm install
       - run: npm run build
-      - run: npm test
+        env:
+          CI: false 
+      - run: npm test --if-present
       - name: deploy
         uses: crazy-max/ghaction-github-pages@v1
         with:
