--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,6 +22,8 @@ jobs:
         env:
           CI: false 
       - run: npm test --if-present
+        env:
+          CI: false 
       - name: Deploy
         uses: crazy-max/ghaction-github-pages@v1
         with:
