--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,5 +27,6 @@ jobs:
       - name: Deploy
         uses: crazy-max/ghaction-github-pages@v1
         with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           target_branch: gh-pages
           build_dir: build
