--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@iconify-json/lucide": "1.1.145",
     "@nuxt/image": "1.1.0",
     "@nuxt/ui": "2.11.1",
+    "axios": "^1.8.3",
     "vue-use-fixed-header": "^2.0.0"
   }
 }
