--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "nuxt-app",
   "private": false,
   "version": "0.1.0",
+  "homepage": "https://yulin-physics.github.io/yulinchen",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@nuxt/content": "^2.10.0",
@@ -15,6 +18,7 @@
     "@nuxthq/studio": "1.0.6",
     "@nuxtjs/fontaine": "^0.4.1",
     "@nuxtjs/google-fonts": "3.1.1",
+    "gh-pages": "^6.3.0",
     "nuxt": "3.9.1",
     "nuxt-icon": "0.6.7",
     "prettier": "3.1.1",
