--- a/package.json
+++ b/package.json
@@ -1,50 +1,35 @@
 {
-  "homepage": "https://yulin-physics.github.io/yulinchen",
-  "name": "yulinchen",
-  "version": "0.1.0",
+  "name": "nuxt-app",
   "private": false,
-  "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/user-event": "^12.8.3",
-    "antd": "^4.16.13",
-    "framer-motion": "^4.1.17",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "react-typed": "^1.2.0",
-    "react-vertical-timeline-component": "^3.3.3",
-    "styled-components": "^5.3.5",
-    "web-vitals": "^1.1.2"
-  },
+  "version": "0.1.0",
+  "homepage": "https://yulin-physics.github.io/yulinchen",
   "scripts": {
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare",
     "predeploy": "npm run build",
-    "deploy": "rm -rf node_modules/.cache/gh-pages && gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "@testing-library/react": "^12.1.3",
-    "gh-pages": "^3.2.3"
+    "@nuxt/content": "^2.10.0",
+    "@nuxt/devtools": "1.0.5",
+    "@nuxthq/studio": "1.0.6",
+    "@nuxtjs/fontaine": "^0.4.1",
+    "@nuxtjs/google-fonts": "3.1.1",
+    "gh-pages": "^6.3.0",
+    "nuxt": "3.9.1",
+    "nuxt-icon": "0.6.7",
+    "prettier": "3.1.1",
+    "prettier-plugin-tailwindcss": "0.5.9",
+    "yarn-upgrade-all": "^0.7.2"
+  },
+  "dependencies": {
+    "@iconify-json/lucide": "1.1.145",
+    "@nuxt/image": "1.1.0",
+    "@nuxt/ui": "2.11.1",
+    "axios": "^1.8.3",
+    "vue-use-fixed-header": "^2.0.0"
   }
 }
