--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: "20"
       # Pick your own package manager and build script
       - run: npm install
-      - run: NUXT_APP_BASE_URL=/yulinchen/ npx nuxt build --preset github_pages
+      - run: NUXT_APP_BASE_URL=/yulinchen/ NODE_OPTIONS=--max_old_space_size=8192 npx nuxt build --preset github_pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
